--- a/_posts/2021-02-14-chon-py.md
+++ b/_posts/2021-02-14-chon-py.md
@@ -1,8 +1,9 @@
 ---
 layout: post
-title: "Lauch App Automaticaly"
+title: "Reminder App"
 date: 2021-02-14 12:00:00 -0500
 ---
 
-Launch your app at a given time with a cron job. 
+Use cron job to launch an app at a given time.
 
+"Hello, This is a guide to set up "
