added img about

--- a/_posts/2021-02-14-chon-py.md
+++ b/_posts/2021-02-14-chon-py.md
@@ -6,36 +6,31 @@ date: 2021-02-14 12:00:00 -0500
 
 Use cron job to launch an app at a given time.
 
-"Hello, This is a guide to set up "
-
 Launch your app at a given time with a cron job on Linux. 
 
-" This will be of use to someone who wants to run their app to run at a certain time of the day. For me I wanted a very simple box to pop-up everyday at 9:00 pm that reminded me to stand up and stretch for 15 minutes. I will be using Python3 and Crontab as my tools, but keep in mind there are other ways to accomplish this task. "
+ This will be of use to someone who wants to run their app to run at a certain time of the day. For me I wanted a very simple box to pop-up everyday at 9:00 pm that reminded me to stand up and stretch for 15 minutes. I will be using Python3 and Crontab as my tools, but keep in mind there are other ways to accomplish this task. "
 
-"The first step is to write the app, The code for my app is posted at the bottom if you would like to test with that(requires Gtk to be installed)."
+The first step is to write the app, The code for my app is posted at the bottom if you would like to test with that(requires Gtk to be installed)."
 
-"gi.require_version("Gtk", "3.0")
+
+
+gi.require_version("Gtk", "3.0")
+
 from gi.repository import Gtk
 
-#
-# Create a window object and sets size.
-#
 win = Gtk.Window()
+
 win.set_border_width(24)
-#
-# Text to be displayed.
-#
+
 text = Gtk.Label("Stretch for 15 minutes")
 
-#
-# Sets title for the window.
-# Add text to the window Object.
-#
 win.set_title("Dude!")
+
 win.add(text)
 
-win.connect("destroy", Gtk.main_quit) # Sets X icon to terminate program.
-win.show_all()                        # Displays the window on the screen.
-Gtk.main()                            # Starts the event loop.
-"
+win.connect("destroy", Gtk.main_quit) 
+
+win.show_all()                       
+
+Gtk.main()                          
 
