reminder app post edit

--- a/_posts/2021-02-14-chon-py.md
+++ b/_posts/2021-02-14-chon-py.md
@@ -8,10 +8,11 @@ Use cron job to launch an app at a given time.
 
 Launch your app at a given time with a cron job on Linux. 
 
- This will be of use to someone who wants to run their app to run at a certain time of the day. For me I wanted a very simple box to pop-up everyday at 9:00 pm that reminded me to stand up and stretch for 15 minutes. I will be using Python3 and Crontab as my tools, but keep in mind there are other ways to accomplish this task. "
+ This will be of use to someone who wants to run their app to run at a certain time of the day. For me I wanted a very simple box to pop-up everyday at 9:00 pm that reminded me to stand up and stretch for 15 minutes. I will be using Python3 and Crontab as my tools, but keep in mind there are other ways to accomplish this task. 
 
-The first step is to write the app, The code for my app is posted at the bottom if you would like to test with that(requires Gtk to be installed)."
+The first step is to write the app, The code for my app is posted at the bottom if you would like to test with that(requires Gtk to be installed).
 
+Depending on your linux disto you may need to install crontab.I'm using a version called "cronie". If you already have a version of cron installed great. If not install "cronie" or check out other options here <a href="https://wiki.gentoo.org/wiki/Cron">cron guide</a>
 
 
 gi.require_version("Gtk", "3.0")
