removed unused images

--- a/_posts/2021-02-14-chon-py.md
+++ b/_posts/2021-02-14-chon-py.md
@@ -12,7 +12,9 @@ Launch your app at a given time with a cron job on Linux.
 
 The first step is to write the app, The code for my app is posted at the bottom if you would like to test with that(requires Gtk to be installed).
 
-Depending on your linux disto you may need to install crontab.I'm using a version called "cronie". If you already have a version of cron installed great. If not install "cronie" or check out other options here <a href="https://wiki.gentoo.org/wiki/Cron">cron guide</a>
+Depending on your linux disto you may need to install crontab.I'm using a version called "cronie". If you already have a version of cron installed great. If not install "cronie" or check out other options here <a href="https://wiki.gentoo.org/wiki/Cron">cron guide</a>. 
+
+
 
 
 gi.require_version("Gtk", "3.0")
